openshift/gateway/base/water-usgs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: water-usgs
  namespace: gateway
spec:
  ports:
    - name: https
      protocol: TCP
      port: 443       # The port clients target inside the cluster
      targetPort: 443 # The port your external servers are listening on
  clusterIP: None    # "Headless" lets Envoy see both addresses
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: water-usgs-endpoints
  namespace: gateway
  labels:
    kubernetes.io/service-name: water-usgs
addressType: IPv4
ports:
  - name: https
    protocol: TCP
    port: 443
endpoints:
  - addresses: ["137.227.241.74"]
  - addresses: ["137.227.235.121"]
  - addresses: ["137.227.252.8"]
