openshift/gateway/base/echo-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-route
  namespace: gateway
spec:
  parentRefs:
  - name: wildcard-gateway
    namespace: openshift-ingress
  hostnames: ["echo.gateway.apps.CLUSTER_DOMAIN"]
  rules:
  - backendRefs:
    - name: echo-api 
      port: 8080
