openshift/gateway/base/status-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: status-route
  namespace: gateway
spec:
  parentRefs:
  - name: wildcard-gateway
    namespace: openshift-ingress
  hostnames: ["status.gateway.apps.CLUSTER_DOMAIN"]
  rules:
  - filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        set:
        - name: Host
          value: status.redhat.com
    backendRefs:
    - name: status-redhat
      port: 443
