openshift/gateway/base/water-usgs-redirect-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: water-usgs-http-redirect
  namespace: gateway
spec:
  parentRefs:
  - name: wildcard-gateway
    namespace: openshift-ingress
    sectionName: http
  hostnames: ["water-usgs.gateway.apps.CLUSTER_DOMAIN"]
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
