openshift/gateway/base/water-usgs-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: water-usgs-route
  namespace: gateway
spec:
  parentRefs:
  - name: wildcard-gateway
    namespace: openshift-ingress
  hostnames: ["water-usgs.gateway.apps.CLUSTER_DOMAIN"]
  rules:
  - backendRefs:
    - name: water-usgs
      port: 443
